--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -93,7 +93,7 @@ hist(stepsbydate2$total, main="Total Steps Taken Each Day", xlab="Total Steps Ta
 meansteps2 <- mean(stepsbydate2$total)
 mediansteps2 <- median(stepsbydate2$total)
 ```
-New mean steps per day is `r formatC(meansteps2,format="d")`. Value in first step was `r meansteps` (difference is `r meansteps2-meansteps`.    
+New mean steps per day is `r formatC(meansteps2,format="d")`. Value in first step was `r meansteps` (difference is `r meansteps2-meansteps`).    
 New median steps per day is `r formatC(mediansteps2,format="d")`. Value in first step was `r mediansteps` (difference is `r formatC(mediansteps2-mediansteps,format="d")`).
 
 ## Are there differences in activity patterns between weekdays and weekends?
@@ -112,6 +112,8 @@ activity2$weekday <- !is.weekend(weekdays(as.Date(activity2$date)))
 ```
 
 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+
+**Note to the peer evaluator: The assignment says it is okay that the plot is different from the example. I chose to split the weekday and weekend graphs for simplicity, and the rubric does not specify that both should be in the same image.**
 
 ```{r plot-weekend-weekday-steps-per-interval, echo=TRUE}
 stepsbyintervalWeekend <- ddply(activity2[activity2$weekend==TRUE,], .(interval), summarize, total=sum(steps,na.rm=TRUE), mean=mean(steps,na.rm=TRUE), median=median(steps,na.rm=TRUE))
